Finish H-Net past/future posts

--- a/_posts/2025-07-11-hnet-past.md
+++ b/_posts/2025-07-11-hnet-past.md
@@ -6,7 +6,7 @@ tags:
 giscus_comments: false
 date: 2025-07-10
 featured: false
-thumbnail: assets/img/2024-05-31-mamba-2/mamba-2-V3-transparent.png
+thumbnail: assets/img/2025-07-11-hnet/whiteboard_2.jpg
 
 authors:
   - name: Albert Gu
@@ -30,23 +30,46 @@ toc:
   - name: Hierarchy is Everywhere
   - name: Hierarchical RNNs
   - name: S4 and SaShiMi
-  - name: A Differentiable Chunking Module?
+    subsections:
+      - name: Autoregressive U-Nets for image modeling
+      - name: U-Nets don't work for language
+      - name: But they work great for audio!
+  - name: A Differentiable Chunking Mechanism?
+    subsections:
+      - name: Attention as a primitive
+      - name: Chunking as a primitive
+      - name: Tokenization as a case study
+      - name: Stuck.
   - name: Information-based Chunking
     subsections:
-      - name: 
-      - name: 
-      - name: 
-  - name: Differentiable Selection with <br> Modern Techniques
+      - name: Total information content as a chunking strategy
+      - name: The project begins
+  - name: Differentiable Selection with Modern Techniques
+  - name: Discovering Prior and Concurrent Works
+    subsections:
+      - name: Hourglass and Dynamic Pooling Transformer
+      - name: BLT
+  - name: A World of Improvements
+  - name: Tradeoffs of SSMs and Transformers
+    subsections:
+      - name: Noisy data
+      - name: SSMs as compressive models
+  - name: The Future
 
 ---
 
-The [H-Net] model has been a dream of mine for years.
-I've been fortunate enough to be able to work with my student [Sukjun](https://sukjunhwang.github.io/) who made the technical breakthroughs behind this model, solving (or at least making serious progress towards) what I consider to be a very difficult but foundational problem for deep learning.
+This post is part of a two-part series.
+1. H-Nets: the Past
+2. [H-Nets: the Future]({% post_url 2025-07-11-hnet-future %})
+
+The [H-Net](https://arxiv.org/abs/2507.07955) model has been a dream of mine for years.
+I've been fortunate enough to be able to work with my student [Sukjun](https://sukjunhwang.github.io/) who made the technical breakthroughs behind this model,
+solving (or at least making serious progress towards) what I consider to be a very difficult but foundational problem for deep learning.
 
 In this post, I provide an informal personal recounting of the motivation and history of this project, providing various context and discussion that wouldn't make sense in a paper.
 This post is really just for fun -- I've always found it interesting to read about the windy history of research instead of just the streamlined final result, and I felt like telling this story.
 
-In the next post [Part II (The Future)](#hnet-the-future), I'll explain why I think this model is so important and a variety of potential downstream implications.
+In the next post [H-Nets (The Future)](#hnet-the-future), I'll explain why I think this model is so important and a variety of potential downstream implications.
 
 
 ## Hierarchy is Everywhere
@@ -102,7 +125,7 @@ The overall structure of this model, such as the fixed-width pooling and how to 
 
 {% include figure.liquid loading="eager" path="assets/img/2025-07-11-hnet/s4_cifar_appendix.png" caption="I just realized that I really never hinted at the U-Net structure anywhere in the main body, which seems like a big oversight. Oops." %}
 
-As far as I'm aware, this paper (concurrently with [Hourglass Transformer](https://arxiv.org/abs/2110.13711) <d-cite key="nawrot2022hierarchical"></d-cite>, submitted to arXiv just 5 days apart and with nearly identical architectures!) might have been the first to actually use an autoregressive U-Net?<d-footnote>On 1D sequences specifically; <a href="https://arxiv.org/abs/1701.05517">PixelCNN++</a> <d-cite key="salimans2017pixelcnn"></d-cite> did something similar on 2D structure, which was the motivation for my architecture.</d-footnote>
+As far as I'm aware, this paper (concurrently with [Hourglass Transformer](https://arxiv.org/abs/2110.13711) <d-cite key="nawrot2022hierarchical"></d-cite>, submitted to arXiv just 5 days apart and with nearly identical architectures!) might have been the first to actually use an autoregressive U-Net?<d-footnote>On 1D sequences specifically; <a href="https://arxiv.org/abs/1701.05517">PixelCNN++</a> <d-cite key="salimans2017pixelcnn++"></d-cite> did something similar on 2D structure, which was the motivation for my architecture.</d-footnote>
 Although it's not particularly complicated, so I wouldn't be surprised if there were some earlier ones I missed.
 
 ### U-Nets don't work for language
@@ -129,7 +152,7 @@ where [it worked really well](https://arxiv.org/abs/2202.09729) <d-cite key="goe
 
 ## A Differentiable Chunking Mechanism?
 
-Around 2022-2023, I was idly thinking about hierarchies in the back of my mind, and the way I formulated the goal was something like this.
+Around 2022-2023, I was idly thinking about hierarchies in the back of my mind, and the way I conceptualized the goal was something like this.
 
 ### Attention as a primitive
 To me the self-attention mechanism could be phrased as: A simple module that captures the "primitive" of forming *dense connections* and building *functions on sets*.
@@ -148,7 +171,7 @@ Surely this was a more appropriate way of modeling language and much more!
 ### Tokenization as a case study
 
 Back then, I had already formulated tokenization as a major problem that I wanted to solve.
-The first reason is, as I appealed to in my [[previous blog]({% post_url 2025-07-08-tradeoffs %}#should-we-get-rid-of-tokenization)],
+The first reason is, as I explained in my [[previous blog]({% post_url 2025-07-08-tradeoffs %}#should-we-get-rid-of-tokenization)],
 an appeal to aesthetics and generality, which to me felt important enough.
 But the more specific reason was that I felt that the proper way
 to solve tokenization would be through creating a *differentiable chunking mechanism*, which would be so much more powerful.
@@ -187,7 +210,7 @@ and I pitched the above approach as a concrete direction to get started.
 
 Some students got interested and started thinking about this.
 I was still very, very interested in the above approach about information-based chunking;
-[Ricardo](https://www.linkedin.com/in/ricardobuitrago/) explored it a little bit but didn't try too hard as he started working on another project on [length generalization in recurrent models](https://goombalab.github.io/blog/2025/improving-length-generalization/) <d-cite key="buitrago2025understanding"></d-cite> (I'm also very fond of this result!).
+[Ricardo](https://www.linkedin.com/in/ricardobuitrago/) explored it a little bit but didn't get too far as he started working on another project on [length generalization in recurrent models](https://goombalab.github.io/blog/2025/improving-length-generalization/) <d-cite key="buitrago2025understanding"></d-cite> (I'm also very fond of this result!).
 I kept trying to get Sukjun to try this approach as well, which I was convinced was a good idea...
 
 
@@ -195,17 +218,27 @@ I kept trying to get Sukjun to try this approach as well, which I was convinced 
 
 Fortunately, Sukjun refused to listen to me because he had a much better idea! (A recurring theme in this project...)
 
-He wanted to try something loosely inspired by mixture-of-experts (MoE), the idea being that MoE (where each token gets "routed" to a fixed set of $k$ "experts) is essentially a discrete selection problem like the one we want to solve.
+He wanted to try something loosely inspired by mixture-of-experts (MoE), the idea being that MoE (where each token gets "routed" to a fixed set of $k$ "experts") is essentially a discrete selection problem like the one we want to solve.
 
 The main advantage of this approach is that it provides some hope for building a *differentiable* chunking strategy in an end-to-end model, unlike my information-based heuristic which would require training a separate proxy model first.
-At the time, I actually basically didn't know at all how MoE worked, so I left Sukjun to his own devices for a long time,
+At the time, I actually basically didn't know anything at all how MoE worked, so I left Sukjun to his own devices for a long time,
 and he got the main ideas working relatively quickly.
 But there were a lot of really confusing training behaviors and instabilities, so he spent a long time building intuition and slowly improving the model.
 
-[TODO: add a whiteboard picture from June or an early PowerPoint diagram he drew]
-
 Incidentally, it's kind of interesting to me how obvious in hindsight, but not in foresight, the main idea is.
 As this project developed, and I told a bunch of people about it, their reaction usually went from "this differentiable selection problem seems impossible" to "oh yeah that might work" as soon as I mentioned the connection to MoE being another variant of a discrete-selection problem.
+
+<div class="row mt-3">
+  <div class="col-sm mt-3 mt-md-0">
+    {% include figure.liquid loading="eager" path="assets/img/2025-07-11-hnet/whiteboard_1.jpg" %}
+  </div>
+  <div class="col-sm mt-3 mt-md-0">
+    {% include figure.liquid loading="eager" path="assets/img/2025-07-11-hnet/whiteboard_2.jpg" %}
+  </div>
+</div>
+<div class="caption">
+Found some random whiteboard pictures from late 2024. Looks like on the left we were trying to figure out how to improve signal propagation into the router weights, including considering tricks like norm layers, straight-through estimator, and Gumbel noise. On the right we had just added the <i>per-network norms</i> idea from the paper and also had to properly rescale the initialization of each layer accordingly to balance (I just realized we might have forgotten to report this in the paper; there were <i>so many details</i> to get right, although all motivated by first principles).
+</div>
 
 ## Discovering Prior and Concurrent Works
 
@@ -255,7 +288,7 @@ So we didn't go with it. Alas 🥲
 
 ### BLT
 
-By December, we had made a lot of progress and pretty much had the main architecture done (in particular, Sukjun had come up with the *smoothing module* which at the time we were calling the "EMA detokenizer"; as we show in the paper's ablations, this was one of the most important new techniques introduced.)
+By December, we had made a lot of progress and pretty much had the main architecture done (in particular, Sukjun had come up with the *smoothing module* which at the time we were calling the "EMA detokenizer"; as we show in the paper's ablations, this was one of the most important new techniques introduced).
 
 At this point, the [Byte Latent Transformer (BLT)](https://arxiv.org/abs/2412.09871) <d-cite key="pagnoni2024byte"></d-cite> paper came out, which made a big splash for claiming to solve tokenization end-to-end, through a similar hierarchical architecture using an entropy-based segmentation rule.
 (Actually, DPT above already proposed similar entropy heuristics, but didn't execute it as well.)
@@ -275,7 +308,7 @@ The intuition in both is that segmentations should happen if the model is "surpr
 But surprise is better measured by the former quantity, not the latter.
 A concrete example is any conditional distribution that puts most of its mass on one vocab word $w$;
 this conditional distribution would have very low entropy and so the conditional entropy heuristic would never create a new chunk.
-But in the event that the actual token that appears is a different word $w'$,
+But in the event that the actual token that appears is a different word $v \neq w$,
 the model should be *very* surprised and draw a boundary in the rare case this happens.
 The negative log-likelihood captures this actual information content.
 
@@ -283,15 +316,14 @@ I'm a little confused by why both DPT and BLT used the conditional entropy inste
 Maybe I'm missing something, or for some reason empirically it just works better?
 {% enddetails %}
 
-After BLT came out, we had the thought to just clean up our (pretty reasonable already at the time) results and put out a pre-print quickly. But we decided to follow our principles: put our heads down and keep working in the direction we believe in, and wait to put something out when it was done in the ideal way we wanted, instead of worrying about community perception.
+[//]: # After BLT came out, we had the thought to just clean up our (pretty reasonable already at the time) results and put out a pre-print quickly. But we decided to follow our principles: put our heads down and keep working in the direction we believe in, and wait to put something out when it was done in the ideal way we wanted, instead of worrying about community perception.
 
-<span style="color:blue">Is the tone here appropriate? I want to point out limitations and differentiate us in an honest way without looking disparaging of prior work or sounding defensive.</span>
 
 
 ## A World of Improvements
 
 I think the architecture has been relatively stable since early 2025, but we spent a long time trying to understand and simplify every part of it.
-For example,
+For example (this is just a small subset),
 - **Architecture components**: our final architecture included post-norm layers at the end of every sub-network, as well as linear projections on the residual connection. We spent a long time trying to remove these since I felt like they were non-standard techniques (most U-Nets don't have these) that complicated the model. But in the end, they seem very useful---maybe essential---and we kept them.
 - **Sparsity auxiliary loss**: Our auxiliary loss targets a specific down-sampling ratio (Section 2.3 of the paper). This seems a little artificial to me and introduces an annoying new hyperparameter (thankfully, the only one!). I felt like it would be cleaner to simply impose a "sparsity loss" that encouraged higher compression rates (it would be counter-balanced by the main loss function which encourages more compute, hence lower compression rates). We found some things that sort of worked but it didn't seem as consistent, so for this version of the H-Net we kept the targeted loss.
 - **Chunking mechanisms**: We tried so many different variations of the routing module, upsampling step, downsampling step, smoothing module, and every other component. Sukjun's PowerPoint deck of ideas and variations has hundreds of slides, and we were only able to report a very small subset of ablations in the paper of things we did.
@@ -302,7 +334,8 @@ and are as simple as we could make it without sacrificing stability or performan
 
 {% include figure.liquid loading="eager" path="assets/img/2025-07-11-hnet/tuning.png" caption="A random slide from the deck of ideas involving multiple residual connections and extra stages/sub-networks, which remained as flags in the internal code for a long time." %}
 
-I haven't been able to run experiments personally in a while, and it was like watching an artist work to see Sukjun improve the architecture steadily over time with multiple creative and essential ideas -- if it isn't clear, he has by far the best intuition for everything related to H-Nets.
+I haven't been able to run experiments personally in a while, and it was like watching an artist at work to see Sukjun improve the architecture steadily over time with multiple creative and essential ideas -- if it isn't clear, he has by far the best intuition for everything related to H-Nets.
+
 I have to say that this was one of the most difficult empirical projects I've witnessed (and I think I'm somewhat decent at creating architectures 👀).
 Normally when tuning models, one hopes that different axes of variation act somewhat independently so they can be ablated in isolation and we can perform a "coordinate descent in design space".
 But somehow for this architecture, it felt like there were 12 different axes that were all critical and that *all had to interact together in exactly the right way*.
@@ -310,6 +343,7 @@ There were so many times when we thought that option "A" was better than "B",
 before changing some other design decisions and flip-flopping to B,
 before changing even more things and going back to A. And this happened with every axis of variation.
 Even after we had all the main ingredients, it was really difficult to get them to interact together seamlessly.
+The main driving force here was Sukjun's intuition and persistence.
 
 
 ## Tradeoffs of SSMs and Transformers
@@ -328,7 +362,7 @@ This should be able to compress and strip away the noise tokens before feeding i
 
 Can the H-Net actually solve this in practice? I don't know, maybe some more work would need to be done.
 I was more interested in the litmus test as a thought experiment to guide architecture design, not necessarily as an actual synthetic task.
-I did hypothesize though that something that could theoretically solve the litmus test might be better at working with less clean data,
+I did hypothesize though that something that could theoretically solve the litmus test might be better at working with noisier data,
 but I'd say I don't have particularly high confidence in this hypothesis (I really don't know).
 
 ### SSMs as compressive models
@@ -336,8 +370,8 @@ but I'd say I don't have particularly high confidence in this hypothesis (I real
 Finally, let me show perhaps my favorite experiment from the paper, even though this is buried somewhere late in the ablations because it's subtle.
 
 
-In the previous post, I asked the question: [[Is compression a bug, or a feature?]({% post_url 2025-07-08-tradeoffs %}#state-space-models)]
-and I floated the idea that perhaps SSMs had hidden strengths due to their compressive abilities.
+In the previous post, I asked the question: [[Is compression a bug, or a feature?]({% post_url 2025-07-08-tradeoffs %}#compression-bug-feature)]
+And I floated the idea that perhaps SSMs had hidden strengths due to their compressive abilities.
 
 The more obvious piece of evidence I gave for this was comparing the inductive bias of SSMs and Transformers, for example, contrasting these two facts:
 1. Transformers and SSMs have similar performance on tokenized language
@@ -377,17 +411,23 @@ although this is only a subset of the wide range of follow-up directions that I 
 One question that I expect we'll get is: do H-Nets **actually scale better**?
 In the paper, we showed training loss curves, where they display a striking trend of seeming to scale better with more data.
 We use these as proxies for a qualitative assessment of their scaling behavior, which I do believe is valuable (a justification is in the Discussion section of the paper).
-I also actually believe that **H-Nets will significantly shift the scaling law curve**.
+I also actually do believe that H-Nets will shift the scaling law curve in a non-trivial way.
 However, what we did aren't formal scaling laws.
 
 Why didn't we do those? Well, I guess the main reason is limited compute and more so the [sheer difficulty](#a-world-of-improvements) of developing this model,
 which is where all our resources were invested.
-At no point did it seem worth completely freezing the architecture to run out expensive formal scaling laws, when I think we were able to get an intuitive understanding of their scaling behavior from our proxy protocol;
+At no point did it seem worth completely freezing the architecture to run out expensive formal scaling laws, when I think we were able to get an intuitive understanding of their behavior from our proxy protocol;
 and moreover, when it always seems like there are core questions we don't understand and low-hanging improvements to make to the model.
 
-{% include figure.liquid loading="eager" path="assets/img/2025-07-11-hnet/bpb_curve_xl_hnet_white.png" width="50%" caption="On a similar note, I realized we should have just ran this out for much more data to show the gap widening 🤦🏻 <br> We didn't because we only ran things out enough to follow our protocols and provide signal to improving the model." %}
 
-We have a bunch of ideas for where to go from here;
-I'll touch on some of these, and also return to scaling laws, in the [next post](2025-07-11).
+<div style="max-width: 600px; margin: 0 auto; text-align: center;">
+{% include figure.liquid loading="eager" path="assets/img/2025-07-11-hnet/bpb_curve_xl_hnet_white.png" width="50%" %}
+</div>
+<div class="caption">
+On a similar note, I realized we should have just ran this out for much more data to see if the gap widens 🤦🏻 <br> We didn't because we only ran things out enough to follow our protocols and provide signal to improving the model.
+</div>
 
-<span style="color:red">AG: for overall feedback, these were some of my goals for writing this post: (1) tell a personal story about this direction for fun (maybe people will find it interesting), and flagplant that I've been thinking about it for a long time (2) Hype June up and make it explicit that he did all the work, not me. (3) Add a timeline to things and more direct discussion related models, to circumvent expected questions/criticism about comparing to BLT despite coming much after them. (4) Similarly, pre-empt criticism about overclaiming about scaling laws which we softly claim in the paper. Did these get conveyed, without coming across as excessive? </span>
+We have a lot of ideas for where to go from here;
+I'll touch on some of these in the [next post]({% post_url 2025-07-11-hnet-future %}).
+
+[//]: # <span style="color:red">AG: for overall feedback, these were some of my goals for writing this post: (1) tell a personal story about this direction for fun (maybe people will find it interesting), and flagplant that I've been thinking about it for a long time (2) Hype June up and make it explicit that he did all the work, not me. (3) Add a timeline to things and more direct discussion related models, to circumvent expected questions/criticism about comparing to BLT despite coming much after them. (4) Similarly, pre-empt criticism about overclaiming about scaling laws which we softly claim in the paper. Did these get conveyed, without coming across as excessive? </span>
