Final edits on HNet blogs

--- a/_posts/2025-07-11-hnet-past.md
+++ b/_posts/2025-07-11-hnet-past.md
@@ -1,6 +1,6 @@
 ---
 layout: distill
-title: H-Net - The Past
+title: H-Nets - the Past
 description:
 tags:
 giscus_comments: false
@@ -32,7 +32,7 @@ toc:
   - name: S4 and SaShiMi
     subsections:
       - name: Autoregressive U-Nets for image modeling
-      - name: U-Nets don't work for language
+      - name: U-Nets don&#39;t work for language
       - name: But they work great for audio!
   - name: A Differentiable Chunking Mechanism?
     subsections:
@@ -108,7 +108,7 @@ which inspired me to think of RNNs as continuous systems and led to a lot of my 
 
 ## S4 and SaShiMi
 
-After DeepMind, my research switched completely to sequence models, and I started developing state space models from [HIPPO]() to [LSSL]() to [S4]() CITE, which was the culmination of my PhD.
+After DeepMind, my research switched completely to sequence models<d-footnote>By the way, this happened in the 5th year of my PhD. I always tell junior PhD students that it's never too late and to focus on your fundamentals first!</d-footnote>, and I started developing state space models from [HIPPO](https://arxiv.org/abs/2008.07669) <d-cite key="gu2020hippo"></d-cite> to [LSSL](https://arxiv.org/abs/2110.13985) <d-cite key="gu2021combining"></d-cite> to [S4](https://arxiv.org/abs/2111.00396) <d-cite key="gu2022efficiently"></d-cite>, which was the culmination of my PhD.
 A little known fact (I'm guessing) about the S4 paper is that I actually introduced a hierarchical architecture in one of the experiments!
 
 
@@ -118,17 +118,17 @@ A little known fact (I'm guessing) about the S4 paper is that I actually introdu
 
 In this paper, we tested S4's autoregressive modeling ability on a variety of distributions:
 on the left is the CIFAR-10 density estimation problem,
-and on the right is language modeling on WikiText-103 (at the time a popular data set, but far too small scale now).
+and on the right is language modeling on WikiText-103 (at the time a popular dataset, but far too small scale now).
 
-To improve the pixel modeling problem performance, I actually introduced an *autoregressive U-Net* structure that had two stages of down-sampling.
-The overall structure of this model, such as the fixed-width pooling and how to preserve causality for the autoregressive sampling, is very similar to a bunch of models that have since been used for language (EXAMPLES: Hourglass, Megabyte, block)
+To improve the pixel modeling problem performance, I actually introduced an *autoregressive U-Net* structure that had two stages of downsampling.
+The overall structure of this model, such as the fixed-width pooling and how to preserve causality for the autoregressive sampling, is very similar to a bunch of models that have since been used for language (such as Hourglass Transformer, [MegaByte](https://arxiv.org/abs/2305.07185) <d-cite key="yu2023megabyte"></d-cite>, [Block Transformer](https://arxiv.org/abs/2406.02657) <d-cite key="ho2024block"></d-cite>, and a few others).
 
-{% include figure.liquid loading="eager" path="assets/img/2025-07-11-hnet/s4_cifar_appendix.png" caption="I just realized that I really never hinted at the U-Net structure anywhere in the main body, which seems like a big oversight. Oops." %}
+{% include figure.liquid loading="eager" path="assets/img/2025-07-11-hnet/s4_cifar_appendix.png" caption="I just realized that I never mentioned this detail anywhere in the main body, which seems like a big oversight. Oops." %}
 
 As far as I'm aware, this paper (concurrently with [Hourglass Transformer](https://arxiv.org/abs/2110.13711) <d-cite key="nawrot2022hierarchical"></d-cite>, submitted to arXiv just 5 days apart and with nearly identical architectures!) might have been the first to actually use an autoregressive U-Net?<d-footnote>On 1D sequences specifically; <a href="https://arxiv.org/abs/1701.05517">PixelCNN++</a> <d-cite key="salimans2017pixelcnn++"></d-cite> did something similar on 2D structure, which was the motivation for my architecture.</d-footnote>
 Although it's not particularly complicated, so I wouldn't be surprised if there were some earlier ones I missed.
 
-### U-Nets don't work for language
+### U-Nets don&#39;t work for language
 
 Something not reported in the paper, though, was that I tried the same backbone on the WikiText-103 language modeling experiments as well.
 I really wanted it to work, since I felt like hierarchy should be important!
@@ -136,19 +136,19 @@ But no matter what I did, the hierarchical version was always *noticeably worse*
 
 I eventually gave up on this, and I think it formed the basis for some of my intuition around language modeling.
 In particular, I realized that fixed-width pooling just didn't make sense for language.
-(And moreover, I realized that this is essentially the same as convolutions, or at least has the same inductive bias, and this helped form the basis of my hypothesis about how convolutions don't work for language modeling and more general "discrete data" that has variable spacing. See the Aside of my [LINK TO PREVIOUS BLOG] for a bit more discussion.)
+(And moreover, I realized that this is essentially the same as convolutions, or at least has the same inductive bias, and this helped form the basis of my hypothesis about how convolutions don't work for language modeling and more general "discrete data" that has variable spacing. See this part of my [Tradeoffs post]({% post_url 2025-07-08-tradeoffs %}#a-hypothetical-litmus-test) for a bit more discussion.)
 
 To be honest, I don't really understand how so many papers on this U-Net-like strategy have been published for language modeling.
-I'm pretty skeptical that they work at all, as has also been shown in ablations by follow-up works on byte-level language modeling like [SpaceByte]() and [BLT]() CITE.
+I'm pretty skeptical that they work at all, as has also been shown in ablations by follow-up works on byte-level language modeling like [SpaceByte](https://arxiv.org/abs/2404.14408) <d-cite key="slagle2024spacebyte"></d-cite> and [BLT](https://arxiv.org/abs/2412.09871) <d-cite key="pagnoni2024byte"></d-cite>.
 I guess one major difference is that all of these papers were using Transformers, which is much better for language than S4, but I still don't think it really makes sense 🤷.
 
 ### But they work great for audio!
 
 {% include figure.liquid loading="eager" path="assets/img/2025-07-11-hnet/sashimi.png" %}
 
-Instead, I realized that S4 and U-Nets (and convolutions in general) have a great inductive bias for data that has an underlying notion of uniform sampling rate, namely **perceptual modalities** like *audio, images, and video*.
+Instead, I realized that S4 and U-Nets (and convolutions in general) have a great inductive bias for data that has an underlying notion of uniform sampling rate, namely **perceptual modalities** like audio, images, and video.
 So [Karan](https://www.linkedin.com/in/krandiash/) took this autoregressive U-Net backbone with S4 layers and applied it to modeling/generating raw audio waveforms,
-where [it worked really well](https://arxiv.org/abs/2202.09729) <d-cite key="goel2022raw"></d-cite>.<d-footnote> I'm still proud of the method name and title, my most important contribution to this paper 😁</d-footnote>
+where [it worked really well](https://arxiv.org/abs/2202.09729) <d-cite key="goel2022raw"></d-cite>!<d-footnote> I'm still proud of the method name and title, my most important contribution to this paper 😁</d-footnote>
 
 ## A Differentiable Chunking Mechanism?
 
@@ -255,7 +255,7 @@ the main difference being the incorporation of a binary-valued *boundary predict
 
 {% include figure.liquid loading="eager" path="assets/img/2025-07-11-hnet/hourglass.png" caption="The Hourglass Transformer" %}
 
-Their motivation for how to overcome the discrete-choice problem was delegating to stochastic reparametrization techniques, namely the Gumbel-softmax trick CITE.
+Their motivation for how to overcome the discrete-choice problem was delegating to stochastic reparametrization techniques, namely the Gumbel-softmax trick <d-cite key="maddison2017concrete"></d-cite> <d-cite key="jang2017categorical"></d-cite>.
 In their paper, this fully end-to-end version didn't seem to work too well; it had stability issues and underperformed their alternative variants that relied on more heuristics and supervision.
 Ultimately, I guess that DPT attempted to tackle this problem somewhat prematurely and important ideas weren't available yet (for example, the most popular [Switch Transformer](https://arxiv.org/abs/2101.03961) MoE method <d-cite key="fedus2022switch"></d-cite>  was pretty new and perhaps not as established yet).
 But I think this paper deserves more credit for at least making a real attempt at this problem!
