--- a/assets/bibliography/albert.bib
+++ b/assets/bibliography/albert.bib
@@ -3256,3 +3256,40 @@ url="https://doi.org/10.1007/978-3-540-71041-7_3"
       year={2025},
       journal={arXiv preprint arXiv:2506.04761},
 }
+
+@inproceedings{maddison2017concrete,
+  title={The Concrete Distribution: A Continuous Relaxation of Discrete Random Variables},
+  author={Maddison, C and Mnih, A and Teh, Y},
+  booktitle={International Conference on Learning Representations (ICLR)},
+  year={2017}
+}
+
+@inproceedings{jang2017categorical,
+  title={Categorical Reparameterization with Gumbel-Softmax},
+  author={Jang, Eric and Gu, Shixiang and Poole, Ben},
+  booktitle={International Conference on Learning Representations (ICLR)},
+  year={2017}
+}
+
+@inproceedings{xia2023speculative,
+  title={Speculative Decoding: Exploiting Speculative Execution for Accelerating Seq2seq Generation},
+  author={Xia, Heming and Ge, Tao and Wang, Peiyi and Chen, Si-Qing and Wei, Furu and Sui, Zhifang},
+  booktitle={The 2023 Conference on Empirical Methods in Natural Language Processing},
+  year={2023}
+}
+
+@inproceedings{leviathan2023fast,
+  title={Fast Inference from Transformers via Speculative Decoding},
+  author={Leviathan, Yaniv and Kalman, Matan and Matias, Yossi},
+  booktitle={International Conference on Machine Learning},
+  pages={19274--19286},
+  year={2023},
+  organization={PMLR}
+}
+
+@article{chen2023accelerating,
+  title={Accelerating Large Language Model Decoding with Speculative Sampling},
+  author={Chen, Charlie and Borgeaud, Sebastian and Irving, Geoffrey and Lespiau, Jean-Baptiste and Sifre, Laurent and Jumper, John},
+  journal={arXiv preprint arXiv:2302.01318},
+  year={2023}
+}
