--- a/_posts/2025-07-11-hnet-past.md
+++ b/_posts/2025-07-11-hnet-past.md
@@ -6,7 +6,7 @@ tags:
 giscus_comments: false
 date: 2025-07-10
 featured: false
-thumbnail: assets/img/2025-07-11-hnet/whiteboard_2.jpg
+thumbnail: assets/img/2025-07-11-hnet/whiteboard_2.png
 
 authors:
   - name: Albert Gu
