Add june's last name to blog intro lol

--- a/_posts/2025-07-11-hnet-past.md
+++ b/_posts/2025-07-11-hnet-past.md
@@ -63,7 +63,7 @@ This post is part of a two-part series.
 2. [H-Nets: the Future]({% post_url 2025-07-11-hnet-future %})
 
 The [H-Net](https://arxiv.org/abs/2507.07955) model has been a dream of mine for years.
-I've been fortunate enough to be able to work with my student [Sukjun](https://sukjunhwang.github.io/) who made the technical breakthroughs behind this model,
+I've been fortunate enough to be able to work with my student [Sukjun Hwang](https://sukjunhwang.github.io/) who made the technical breakthroughs behind this model,
 solving (or at least making serious progress towards) what I consider to be a very difficult but foundational problem for deep learning.
 
 In this post, I provide an informal personal recounting of the motivation and history of this project, providing various context and discussion that wouldn't make sense in a paper.
