--- a/_posts/2025-07-11-hnet-past.md
+++ b/_posts/2025-07-11-hnet-past.md
@@ -69,7 +69,7 @@ solving (or at least making serious progress towards) what I consider to be a ve
 In this post, I provide an informal personal recounting of the motivation and history of this project, providing various context and discussion that wouldn't make sense in a paper.
 This post is really just for fun -- I've always found it interesting to read about the windy history of research instead of just the streamlined final result, and I felt like telling this story.
 
-In the next post [H-Nets (The Future)](#hnet-the-future), I'll explain why I think this model is so important and a variety of potential downstream implications.
+In the next post [H-Nets (the Future)]({% post_url 2025-07-11-hnet-future %}), I'll explain why I think this model is so important and a variety of potential downstream implications.
 
 
 ## Hierarchy is Everywhere
